syntax = "proto3";
package gamecomm;

//玩家信息
message PlayerInfo{
    uint64 UserID = 1;   //ID
    string Name = 2;    //账号
    int32 Age = 3;      //年龄
    int32 Sex = 4;      //性别
    int64 Gold = 5;     //金币 *100
    int32 VipLevel = 6; //vip级别
}

//玩家列表
message UserList{
    repeated PlayerInfo AllInfos = 1;//所有玩家信息
}


//玩家记录（从数据库中获取）
message PlayerRecord{
    PlayerInfo User = 1; //玩家
    int32 Twice = 2;    //游戏次数
    int32 Ranking = 3;  //当前排名
    int32 Bankroll = 4; //投注额度
    int64 WinLos = 5;   //总输赢 （当局）
}


//游戏记录
message GameRecord{
    bytes Pork = 1;//牌
    int32 Type = 2;//类型
    bool isWon = 3;//输赢情况
}

//历史记录(保存十二条记录)
message GameRecordList{
    repeated GameRecord list = 1;//所有历史信息
}


//----------------------------------------------------------------------

//进入房间（检查进入条件）
message ReqEnterRoom{
	uint32 RoomNum = 1;			//房间号码
	string RoomKey = 2;			//房间钥匙
}

message RespEnterRoom{

}

//进入游戏（检查进入条件）
message ReqEnterGame{
	uint32 GameID = 1;			//游戏标识
}

message RespEnterGame{

}

//退出游戏（检查退出条件）
message ReqExitGame{
	uint32 GameID = 1;			//游戏标识
}

message RespExitGame{

}
